--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "koa-logger": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
+    "mongoose": "^4.4.12",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-router": "^2.0.0-rc5",
