--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-router": "^2.0.0-rc5",
+    "superagent": "^1.8.3",
     "swig": "^1.4.2"
   },
   "devDependencies": {
