--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "build spa with Koa, React, Node and Mongodb",
   "scripts": {
     "deploy": "pm2 start src/server/server.js --watch",
-    "dev": "node src/server/server.js dev",
-    "prod": "node src/server/server.js",
+    "dev": "supervisor src/server/server.js",
+    "prod": "supervisor src/server/server.js",
     "build": "rimraf dist && webpack --progress --hide-modules --config build_config/webpack.prod.config.js"
   },
   "repository": {
@@ -21,10 +21,14 @@
     "antd": "^0.12.13",
     "babel-cli": "^6.4.5",
     "babel-preset-es2015-node5": "^1.1.2",
+    "bcrypt": "^0.8.5",
+    "co": "^4.6.0",
     "co-views": "^2.1.0",
     "history": "^2.0.0-rc2",
     "koa": "^1.0.0",
+    "koa-bodyparser": "^2.0.1",
     "koa-logger": "^1.3.0",
+    "koa-passport": "^1.3.1",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
     "mongoose": "^4.4.12",
