--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "build spa with Koa, React, Node and Mongodb",
   "scripts": {
     "deploy": "pm2 start src/server/server.js --watch",
-    "dev": "supervisor src/server/server.js",
+    "dev": "supervisor -i src/client src/server/server.js ",
     "prod": "supervisor src/server/server.js",
     "build": "rimraf dist && webpack --progress --hide-modules --config build_config/webpack.prod.config.js"
   },
@@ -27,9 +27,11 @@
     "history": "^2.0.0-rc2",
     "koa": "^1.0.0",
     "koa-bodyparser": "^2.0.1",
+    "koa-generic-session": "^1.10.2",
     "koa-logger": "^1.3.0",
     "koa-passport": "^1.3.1",
     "koa-route": "^2.4.2",
+    "koa-sess-mongo-store": "^0.1.1",
     "koa-static": "^2.0.0",
     "mongoose": "^4.4.12",
     "passport-local": "^1.0.0",
