完善了登录/注册

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "deploy": "NODE_ENV=production pm2 start src/server/server.js --watch",
     "start-server": "NODE_ENV=development supervisor -i src/client src/server/server.js",
-    "start-client": "webpack-dev-server --content-base public -ds --config build_config/webpack.dev.config.js --hot --progress --colors --inline",
+    "start-client": "webpack-dev-server --content-base public -ds --config build_config/webpack.dev.config.js --progress --hot --colors --inline",
     "prod": "supervisor src/server/server.js",
     "build": "rimraf dist && webpack --progress --hide-modules --config build_config/webpack.prod.config.js"
   },
@@ -58,6 +58,7 @@
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "node-sass": "^3.4.2",
+    "react-hot-loader": "^1.3.0",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
