添加’新增api'页面/引入codemirror

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^0.8.5",
     "co": "^4.6.0",
     "co-views": "^2.1.0",
+    "codemirror": "^5.14.2",
     "history": "^2.0.0-rc2",
     "koa": "^1.0.0",
     "koa-bodyparser": "^2.0.1",
@@ -37,6 +38,7 @@
     "mongoose": "^4.4.12",
     "passport-local": "^1.0.0",
     "react": "^0.14.0",
+    "react-codemirror": "^0.2.6",
     "react-dom": "^0.14.0",
     "react-router": "^2.0.0-rc5",
     "superagent": "^1.8.3",
