--- a/package.json
+++ b/package.json
@@ -1,76 +1,77 @@
 {
-    "name": "MKRN",
-    "version": "0.0.1",
-    "description": "build spa with Koa, React, Node and Mongodb",
-    "scripts": {
-        "deploy": "NODE_ENV=production pm2 start src/server/server.js --watch",
-        "start-server": "NODE_ENV=development supervisor -i src/client src/server/server.js",
-        "start-client": "webpack-dev-server --content-base public -ds --config build_config/webpack.dev.config.js --progress --hot --colors --inline",
-        "prod": "supervisor src/server/server.js",
-        "build": "rimraf dist && webpack --progress --hide-modules --config build_config/webpack.prod.config.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/callmeJozo/MKRN.git"
-    },
-    "author": "naraku",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/callmeJozo/MKRN/issues"
-    },
-    "dependencies": {
-        "antd": "^0.12.13",
-        "babel-cli": "^6.4.5",
-        "babel-preset-es2015-node5": "^1.1.2",
-        "bcrypt": "^0.8.5",
-        "co": "^4.6.0",
-        "co-views": "^2.1.0",
-        "codemirror": "^5.14.2",
-        "history": "^2.0.0-rc2",
-        "koa": "^1.0.0",
-        "koa-bodyparser": "^2.0.1",
-        "koa-generic-session": "^1.10.2",
-        "koa-logger": "^1.3.0",
-        "koa-passport": "^1.3.1",
-        "koa-route": "^2.4.2",
-        "koa-sess-mongo-store": "^0.1.1",
-        "koa-static": "^2.0.0",
-        "mongoose": "^4.4.12",
-        "passport-local": "^1.0.0",
-        "react": "^0.14.0",
-        "react-codemirror": "^0.2.6",
-        "react-dom": "^0.14.0",
-        "react-router": "^2.0.0-rc5",
-        "superagent": "^1.8.3",
-        "swig": "^1.4.2"
-    },
-    "devDependencies": {
-        "babel-core": "^6.1.2",
-        "babel-loader": "^6.0.1",
-        "babel-preset-es2015": "^6.3.13",
-        "babel-preset-react": "^6.1.2",
-        "css-loader": "^0.23.1",
-        "eventsource-polyfill": "^0.9.6",
-        "extract-text-webpack-plugin": "^1.0.1",
-        "html-webpack-plugin": "^2.15.0",
-        "koa-convert": "^1.2.0",
-        "koa-router": "^5.4.0",
-        "koa-send": "^3.2.0",
-        "koa-webpack-dev-middleware": "^1.2.0",
-        "less": "^2.6.1",
-        "less-loader": "^2.2.3",
-        "node-sass": "^3.4.2",
-        "react-hot-loader": "^1.3.0",
-        "rimraf": "^2.5.2",
-        "sass-loader": "^3.2.0",
-        "style-loader": "^0.13.1",
-        "webpack": "^1.12.2",
-        "webpack-dev-server": "^1.14.1",
-        "webpack-hot-middleware": "^2.10.0"
-    },
-    "babel": {
-        "presets": [
-            "es2015-node5"
-        ]
-    }
+  "name": "MKRN",
+  "version": "0.0.1",
+  "description": "build spa with Koa, React, Node and Mongodb",
+  "scripts": {
+    "deploy": "NODE_ENV=production pm2 start src/server/server.js --watch",
+    "start-server": "NODE_ENV=development supervisor -i src/client src/server/server.js",
+    "start-client": "webpack-dev-server --content-base public -ds --config build_config/webpack.dev.config.js --progress --hot --colors --inline",
+    "prod": "supervisor src/server/server.js",
+    "build": "rimraf dist && webpack --progress --hide-modules --config build_config/webpack.prod.config.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/callmeJozo/MKRN.git"
+  },
+  "author": "naraku",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/callmeJozo/MKRN/issues"
+  },
+  "dependencies": {
+    "antd": "^0.12.13",
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015-node5": "^1.1.2",
+    "bcrypt": "^0.8.5",
+    "co": "^4.6.0",
+    "co-views": "^2.1.0",
+    "codemirror": "^5.14.2",
+    "history": "^2.0.0-rc2",
+    "koa": "^1.0.0",
+    "koa-bodyparser": "^2.0.1",
+    "koa-generic-session": "^1.10.2",
+    "koa-logger": "^1.3.0",
+    "koa-passport": "^1.3.1",
+    "koa-route": "^2.4.2",
+    "koa-sess-mongo-store": "^0.1.1",
+    "koa-static": "^2.0.0",
+    "mongoose": "^4.4.12",
+    "nodemailer": "0.7",
+    "passport-local": "^1.0.0",
+    "react": "^0.14.0",
+    "react-codemirror": "^0.2.6",
+    "react-dom": "^0.14.0",
+    "react-router": "^2.0.0-rc5",
+    "superagent": "^1.8.3",
+    "swig": "^1.4.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.1.2",
+    "css-loader": "^0.23.1",
+    "eventsource-polyfill": "^0.9.6",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.15.0",
+    "koa-convert": "^1.2.0",
+    "koa-router": "^5.4.0",
+    "koa-send": "^3.2.0",
+    "koa-webpack-dev-middleware": "^1.2.0",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
+    "node-sass": "^3.4.2",
+    "react-hot-loader": "^1.3.0",
+    "rimraf": "^2.5.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.10.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015-node5"
+    ]
+  }
 }
