--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "co": "^4.6.0",
     "co-views": "^2.1.0",
     "codemirror": "^5.14.2",
-    "history": "^2.0.0-rc2",
+    "history": "^2.1.1",
     "koa": "^1.0.0",
     "koa-bodyparser": "^2.0.1",
     "koa-generic-session": "^1.10.2",
