--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "css-loader": "^0.23.1",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.15.0",
     "koa-convert": "^1.2.0",
     "koa-router": "^5.4.0",
@@ -65,6 +66,7 @@
     "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0"
