--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "deploy": "NODE_ENV=production pm2 start src/server/server.js --watch",
     "server": "NODE_ENV=development supervisor -i src/client src/server/server.js",
-    "client": "webpack-dev-server --content-base public -ds --config build_config/webpack.dev.config.js --progress --hot --colors --inline",
+    "client": "webpack-dev-server --content-base public -ds --config config/webpack.dev.config.js --progress --hot --colors --inline",
     "prod": "supervisor src/server/server.js",
-    "build": "rimraf dist && webpack --progress --hide-modules --config build_config/webpack.prod.config.js"
+    "build": "rimraf dist && webpack --progress --hide-modules --config config/webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
